@@ -24,6 +24,10 @@ New features
   are of atomic type: :obj:`rpy2.robjects.flatlist_converter`. Those
   rules have been in used for the ipython/jupyter default converter.
 
+- The setter :attr:`rpy2.robjects.vectors.Array.dim` is now implemented,
+  allowing to change the dimension of an R array in place
+  (fixes issue #1145). 
+
 Changes
 -------
 
